# Creal

./: .gitignore  LICENSE  README.md  creal.py  generate_mutants.py
databaseconstructor/: IOGenerator.py  __init__.py  displayfunc.py  functioner.py  generate.py  proxy.py  variable.py
databaseconstructor/functionextractor/: CMakeLists.txt  README.md  extractor.py
databaseconstructor/functionextractor/src/: CMakeLists.txt  FunctionExtractor.cpp  FunctionExtractor.hpp  FunctionPrinter.cpp  FunctionPrinter.hpp  FunctionProcess.cpp  FunctionProcess.hpp  ProcessCall.cpp  ProcessCall.hpp  RenameFunction.cpp  RenameFunction.hpp  RenameGlobal.cpp  RenameGlobal.hpp  RuleActionCallback.cpp  RuleActionCallback.hpp  Utils.cpp  Utils.hpp
databaseconstructor/functionextractor/src/tool/: CMakeLists.txt  FunctionExtract.cpp
profiler/: CMakeLists.txt
profiler/src/: CMakeLists.txt  GlobalMacro.cpp  GlobalMacro.hpp  ProfilerEntry.cpp  ProfilerEntry.hpp  TagExpression.cpp  TagExpression.hpp
profiler/src/tool/: CMakeLists.txt  Profiler.cpp
synthesizer/: synthesizer.py
utils/: compcert.py
